# alpha

./: .gitignore  CSV_IMPORT_GUIDE.md  CSV_IMPORT_IMPLEMENTATION.md  README.md  US_STOCK_EXCHANGES_RESEARCH.md  main.py  requirements.txt  test_csv_import.py  test_market_data.csv
app/: __init__.py  dashboard.py
backend_Cpp/: CMakeLists.txt
backend_Cpp/src/: main.cpp
data/: README.md  all_us_tickers.json  csv_conversion_summary_20260115_202537.json  sp500_tickers.json  us_tradable_tickers.json
data/processed/: AAPL.json  GOOGL.json  MSFT.json  TSLA.json
frontend/: requirements.txt
src/: __init__.py  analystics.py  analytics.py  model.py  scraper.py
